--- a/src/taplist.html
+++ b/src/taplist.html
@@ -36,6 +36,7 @@
               <ul class="dropdown-menu" role="menu" aria-labelledby="global-dropdown">
                 <li role="presentation"><a role="menuitem" tabindex="-1" onClick="editTapList()" href="#">Edit Tap List</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" onClick="editOptions()" href="#">Edit Options</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" onClick="editDropBox()" href="#">DropBox Options</a></li>
                 <li role="presentation"><a role="menuitem" tabindex="-1" onClick="addBeer()" href="#">Add Beer</a></li>
               </ul>
             </div>
@@ -97,11 +98,40 @@
               <label for="numTaps">Number Taps</label>
               <input type="text" class="form-control" id="editNumTaps" placeholder="# Taps">
             </div>
+
+            <div class="form-group">
+              <label for="numTaps">OpenKeyVal Key String</label>
+              <input type="text" class="form-control" id="editOpenKeyValKey" placeholder="OpenKeyVal Key">
+            </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary" onClick="saveOptions();">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Dropbox Settings -->
+  <div class="modal fade" id="edit-drop-box" tabindex="-1" role="dialog" aria-labeledby="editDropBoxModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="editOptionsModalLabel">DropBox Settings</h4>
+        </div>
+        <div class="modal-body">
+          <form role="form">
+            <div class="form-group">
+              <button type="button" id="connectDropBoxBtn" class="btn" onClick="connectToDropBox();">Connect to Dropbox</button>
+              <button type="button" id="disconnectDropBoxBtn" class="btn" onClick="disconnectFromDropBox();">Disconnect from Dropbox</button>
+            </div>
+          </form>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal" onClick="closeDropBox();">Close</button>
         </div>
       </div>
     </div>
@@ -189,10 +219,10 @@
 
   <!-- template for the beer tap section -->
   <script id="beer-tap-template" type="text/x-handlebars-template">
-    <div class="col-md-3" id="beer-tap">
-      <div class="row"><div class="col-md-12" style="text-align:center">
+    <div class="beer-tap">
+      <div class="tap-title">
         <h3>Tap {{tapName}}</h3>
-      </div></div>
+      </div>
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-4">{{beer.abv}}% abv</div>
@@ -218,14 +248,15 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- script for openkeyval - store in the cloud -->
-    <!--<script src="http://cdn.openkeyval.org/statics/openkeyval.packed.js"></script>-->
+    <script src="https://www.dropbox.com/static/api/dropbox-datastores-1.0-latest.js" type="text/javascript"></script>
     <script src="bootstrap.min.js"></script>
     <script src="handlebars-v1.3.0.js"></script>
+    <script src="taplist-dropbox.js"></script>
     <script src="taplist.js"></script>
     <script lang="javascript">
-      loadData();
-      render();
+        $(function() {
+            init();
+        });
     </script>
   </body>
 </html>
